<resources>
    <string name="app_name">My project</string>
    <string name="tv_bookNow">BOOK NOW</string>
    <string name="tv_hotelName">Cinnomon Grand</string>
    <string name="tv_name">Name</string>
    <string name="et_name">Enter your name</string>
    <string name="tv_checkIn">Check-in</string>
    <string name="tv_checkOut">Check-out</string>
    <string name="tv_Rooms">Rooms</string>
    <string name="btn_save">SAVE</string>
    <string name="et_date">DD/MM/YY</string>
    <string name="et_rooms">Qty</string>
    <string name="tv_myBookings">MY BOOKINGS</string>
    <string name="tv_payement">RESERVATION</string>
    <string name="tv_cusName">Customer Name</string>
    <string name="tv_topPayment">Rs. 26000</string>
    <string name="btn_pay">BOOK NOW</string>
    <string name="btn_next">NEXT</string>
    <string name="tv_listDate">DD/MM/YY</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_active">ACTIVE</string>
    <string name="btn_completed">COMPLETED</string>
    <string name="btn_cancelled">CANCELLED</string>
    <string name="tv_viewBooking">VIEW BOOKINGS</string>
    <string name="btn_feedHistory">FEEDBACK HISTORY</string>
    <string name="btn_test">TEST</string>
    <string name="btn_saveEdit">Save</string>
    <string name="tv_hName">Hotel Name</string>
    <string name="et_hName" />
    <string name="tv_hAddress">Address</string>
    <string name="tv_hDescription">Description</string>
    <string name="et_hDescription" />
    <string name="tv_hUname">Username</string>
    <string name="et_hUname" />
    <string name="tv_hPass">Password</string>
    <string name="et_hPass" />
    <string name="tv_hTitle">HOTEL CREATION</string>
    <string name="btn_hCreate">CREATE</string>
    <string name="tv_hp_name">Cinnomon Grand</string>
    <string name="tv_title_address">Address</string>
    <string name="tv_title_descreption">Descreption</string>
    <string name="btn_editHotel">EDIT</string>
    <string name="btn_deleteHotel">DELETE ACCOUNT</string>
    <string name="tv_hotelSignOut">SIGN OUT</string>
    <string name="tv_hName_edit">MODIFY</string>
    <string name="tv_hName_edit2">Hotel Name</string>
    <string name="btn_saveModify">SAVE</string>
    <string name="myReviewsacc3" />
</resources>