<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tharuka.HotelProfile">

    <TextView
        android:id="@+id/tv_hp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tv_hp_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_address"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_title_address"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hp_name" />

    <TextView
        android:id="@+id/tv_hp_address"
        android:layout_width="316dp"
        android:layout_height="101dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_address" />

    <TextView
        android:id="@+id/tv_title_descreption"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_title_descreption"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hp_address" />

    <TextView
        android:id="@+id/tv_hp_desc"
        android:layout_width="318dp"
        android:layout_height="185dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_descreption" />

    <Button
        android:id="@+id/btn_editHotel"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="edit"
        android:text="@string/btn_editHotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hp_desc" />

    <Button
        android:id="@+id/btn_deleteHotel"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:onClick="deleteData"
        android:text="@string/btn_deleteHotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_editHotel" />

    <TextView
        android:id="@+id/tv_hotelSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/tv_hotelSignOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>